--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-mailgo",
+  "name": "gatsby-plugin-mailgo",
   "version": "0.9.6",
   "homepage": "https://mailgo.js.org",
   "repository": {
